--- a/community.html
+++ b/community.html
@@ -165,7 +165,7 @@
               <div class="user-id ">
                 <img src="pic/user.jpg" alt="this image is users profile">
                 <span class="name">محمدرضا دهقانی</span><br>
-                <span id="time"></span>
+                <span id="time">ساعت: 12:37</span>
               </div>
             </div>
             <div class="col-12 col-md-8 mx-auto">
@@ -175,7 +175,7 @@
                   <input type="text" name="" id="" class="form-control" placeholder="پاسخ ...">
                   <button type="submit" class="ripple btn mt-2 border float-right">ارسال</button>
                 </form>
-                <button class="answer-button ripple mt-2" data-toggle="collapse" data-target="#answers">پاسخ ها</button>
+                <button class="answer-button ripple mt-2" data-toggle="collapse" id="see-answers" data-target="#answers">پاسخ ها</button>
                 <div class="answers collapse hide" id="answers">
                   <p class="answer-text">ممنون به خوبی شما دوست عزیز</p>
                   <span id="date">۹۹/۰۲/۰۲</span>
