the date that message sended

--- a/community.html
+++ b/community.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head dir="rtl" lang="fa">
+  <head dir="rtl" lang="fa">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lib/bootstrap.min.css">  
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
     <link rel="icon" href="pic/icon.png" type="image/x-icon">
-</head>    
+  </head>    
   <body >
 
     <div class="container-fluid">
@@ -122,7 +122,8 @@
       <!-- main content -->
 
       <main>
-        <div id="message-container" class="container bg-white py-5">
+
+        <div id="message-container" class="container bg-white py-3 my-3">
           <div class="row">
             <div class="col-12">
               <h4 class="text-right pt-2 head">انجمن پرسش و پاسخ</h4>
@@ -165,7 +166,7 @@
               <div class="user-id ">
                 <img src="pic/user.jpg" alt="this image is users profile">
                 <span class="name">محمدرضا دهقانی</span><br>
-                <span id="time">ساعت: 12:37</span>
+                <span id="time">۱۳۹۹/۲/۳۱،‏ ۱۸:۴۰:۴۸</span>
               </div>
             </div>
             <div class="col-12 col-md-8 mx-auto">
