--- a/community.html
+++ b/community.html
@@ -172,7 +172,7 @@
             <div class="col-12 col-md-8 mx-auto">
               <div class="message-text ">
                 <p class="message-txt">سلام دوستان حالتون چطوره؟!</p>
-                <form action="" class="">
+                <form action="" class="form-answer">
                   <input type="text" name="" id="" class="form-control" placeholder="پاسخ ...">
                   <button type="submit" class="ripple btn mt-2 border float-right">ارسال</button>
                 </form>
