before content loading

--- a/community.html
+++ b/community.html
@@ -14,7 +14,26 @@
   </head>    
   <body >
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="before-content">
+      <div class="container">
+        <div class="row mt-5 p-3" id="div">
+          <div class="col-12 col-sm-9 col-md-8 col-lg-6 col-xl-5 mx-auto" id="div-2">
+            <div>
+              <p>
+                سرویس انجمن پرسش و پاسخ جهت تعامل بیماران با یکدیگر و طرح سوالات مربوط به مشکل خود که توسط دیگر کاربران سایت پاسخ داده می شود، راه اندازی شده است. این سرویس ویژه بیماران تحت نظر پزشک نیست و برای سایر عموم قابل دسترس است. با ثبت نام در این سامانه امکان استفاده از آن برای شما فراهم می شود.
+              </p>
+            </div>
+            <div>
+              <button class="ripple" id="enter">ادامه</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="loading">
+        <div id="loading-animate"></div>
+      </div>
+    </div>
+    <div class="container-fluid" id="content" style="display: none;">
 
       <!-- mobile header -->
 
