--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ul>
               </li>
               <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ورود / ثبت نام</a></li>
-              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
+              <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
         </aside>
@@ -124,7 +124,7 @@
               </div>
               <div class="col-lg-3">
                 <div id="panel">
-                  <a href="#">ورود</a>
+                  <a href="login.html">ورود</a>
                   <a href="signin.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
