--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
             <ul class="navbar-nav">
               <li class="nav-item"><a href="index.html" class="nav-link"><i class="fa fa-home"></i>خانه</a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a></li>
+              <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a></li>
               <!-- <li class="nav-item"><a href="#details-1" class="nav-link" data-toggle="collapse"><i class="fa fa-list-ul"></i>امکانات سایت<i class="fa fa-plus plus-link"></i></a>
                 <ul class="collapse" id="details-1">
                   <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
@@ -67,7 +67,8 @@
                   <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-user"></i>ورود / عضویت</a></li>
+              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ورود / عضویت</a></li>
+              <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
         </aside>
@@ -113,7 +114,7 @@
                     <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
                     <!-- <li class="nav-item"><a href="blog.html" class="nav-link">بلاگ</a></li> -->
                     <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">انجمن</a></li>
+                    <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
                     <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
                       <ul id="detail-list">
                         <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
@@ -126,8 +127,8 @@
               </div>
               <div class="col-lg-3"> 
                 <div id="panel">        
-                  <a href="#">ورود</a>
-                  <a href="#">ثبت نام</a>
+                  <a href="login.html">ورود</a>
+                  <a href="signin.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
               </div>
@@ -173,8 +174,8 @@
                             <input type="checkbox" name="confirm">
                             <span id="terms">مرا به خاطر بسپار</span><a href="#" class="float-left">پسوردتان را فراموش کرده اید؟</a><br>
                             <button type="submit" name="submit-form ripple">ورود</button>
-                            <a href="signin.html" id="btn" class=" ripple">ثبت نام</a>
-                            <a href="clerk-login.html" class=" ripple" id="btn">ورود منشی</a>
+                            <a href="signin.html" id="btn" class="ripple">ثبت نام</a>
+                            <a href="clerk-login.html" class="ripple" id="btn">ورود منشی</a>
                         </form>
                     </div>
                 </div>
