--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
                 </ul>
               </li>
               <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ورود / عضویت</a></li>
-              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
+              <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
         </aside>
@@ -115,7 +115,7 @@
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">انجمن</a></li>
+                    <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
                     <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
                       <ul id="detail-list">
                         <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
@@ -128,8 +128,8 @@
               </div>
               <div class="col-lg-3"> 
                 <div id="panel">        
-                  <a href="#">ورود</a>
-                  <a href="#">ثبت نام</a>
+                  <a href="login.html">ورود</a>
+                  <a href="signin.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
               </div>
