--- a/community.html
+++ b/community.html
@@ -14,7 +14,7 @@
   </head>    
   <body >
 
-    <div class="container-fluid" id="before-content">
+    <!-- <div class="container-fluid" id="before-content">
       <div class="container">
         <div class="row mt-5 p-3" id="div">
           <div class="col-12 col-sm-9 col-md-8 col-lg-6 col-xl-5 mx-auto" id="div-2">
@@ -32,8 +32,8 @@
       <div class="container" id="loading">
         <div id="loading-animate"></div>
       </div>
-    </div>
-    <div class="container-fluid" id="content" style="display: none;">
+    </div> -->
+    <div class="container-fluid" id="content" style="">
 
       <!-- mobile header -->
 
@@ -192,7 +192,7 @@
               <div class="message-text ">
                 <p class="message-txt">سلام دوستان حالتون چطوره؟!</p>
                 <form action="" class="form-answer">
-                  <input type="text" name="" id="" class="form-control" placeholder="پاسخ ...">
+                  <input type="text" name="input-answer" id="" class="form-control" placeholder="پاسخ ...">
                   <button type="submit" class="ripple btn mt-2 border float-right">ارسال</button>
                 </form>
                 <button class="answer-button ripple mt-2" data-toggle="collapse" id="see-answers" data-target="#answers">پاسخ ها</button>
