--- a/community.html
+++ b/community.html
@@ -14,7 +14,7 @@
   </head>    
   <body >
 
-    <div class="container-fluid" id="before-content">
+    <!-- <div class="container-fluid" id="before-content">
       <div class="container">
         <div class="row mt-5 p-3" id="div">
           <div class="col-12 col-sm-9 col-md-8 col-lg-6 col-xl-5 mx-auto" id="div-2">
@@ -32,8 +32,9 @@
       <div class="container" id="loading">
         <div id="loading-animate"></div>
       </div>
-    </div>
-    <div class="container-fluid" id="content" style="display: none">
+    </div> -->
+
+    <div class="container-fluid" id="content" style="">
 
       <!-- mobile header -->
 
