--- a/signin.html
+++ b/signin.html
@@ -126,11 +126,15 @@
                 </nav>
               </div>
               <div class="col-lg-3"> 
-                <div id="panel">   
-                  <span class="login-text"></span>     
-                  <a href="login.html">ورود</a>
+                <div id="panel">
+                  <span id="login-item">ورود
+                    <ul class="navbar" id="detail-list-2">
+                      <li class="nav-item"><a href="clerk-login.html" class="nav-link">ورود منشی</a></li>
+                      <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
+                    </ul>
+                  </span>
                   <a href="signin.html">ثبت نام</a>
-                  <span id="search-btn-lg" class="" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
+                  <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
               </div>
             </div>
