--- a/community.html
+++ b/community.html
@@ -14,28 +14,7 @@
   </head>    
   <body >
 
-    <!-- <div class="container-fluid" id="before-content">
-      <div class="container">
-        <div class="row mt-5 p-3" id="div">
-          <div class="col-12 col-sm-9 col-md-8 col-lg-6 col-xl-5 mx-auto" id="div-2">
-            <div>
-              <p>
-                سرویس انجمن پرسش و پاسخ جهت تعامل بیماران با یکدیگر و طرح سوالات مربوط به مشکل خود که توسط دیگر کاربران سایت پاسخ داده می شود، راه اندازی شده است. این سرویس ویژه بیماران تحت نظر پزشک نیست و برای سایر عموم قابل دسترس است. با ثبت نام در این سامانه امکان استفاده از آن برای شما فراهم می شود.
-              </p>
-            </div>
-            <div>
-              <button class="ripple" id="enter">ادامه</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container" id="loading">
-        <div id="loading-animate"></div>
-      </div>
-    </div> -->
-
-    <div class="container-fluid" id="content" style="">
-
+    <div class="container-fluid" id="content">
       <!-- mobile header -->
 
       <header id="mobile-header">
@@ -129,7 +108,13 @@
               </div>
               <div class="col-lg-3"> 
                 <div id="panel">        
-                  <a href="login.html">ورود</a>
+                  <!-- <a href="clerk-login.html">ورود منشی</a> -->
+                  <span id="login-item">ورود
+                    <ul class="navbar" id="detail-list-2">
+                      <li class="nav-item"><a href="clerk-login.html" class="nav-link">ورود منشی</a></li>
+                      <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
+                    </ul>
+                  </span>
                   <a href="signin.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
