--- a/signin.html
+++ b/signin.html
@@ -41,7 +41,7 @@
             <i class="fa fa-navicon"></i>
           </button>
           <div id="items">
-            <a id="panel" href="#" class="login-text">پنل کاربری</a>
+            <a id="panel" href="login.html" class="login-text">ورود</a>
             <span id="search-btn" onclick="openSearchBox()"><i class="fa fa-search"></i></span>
           </div>
         </nav>
@@ -67,7 +67,7 @@
                   <li class="nav-item"><a href="#" class="nav-link btn-ripple">درباره ما</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="signin.html" class="nav-link btn-ripple"><i class="fa fa-user"></i>ورود / عضویت</a></li>
+              <li class="nav-item"><a href="signin.html" class="nav-link btn-ripple"><i class="fa fa-user"></i>ثبت نام</a></li>
               <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
