--- a/community.html
+++ b/community.html
@@ -50,7 +50,7 @@
           <div id="nav-content">
             <ul class="navbar-nav">
               <li class="nav-item" ><a href="index.html" class="nav-link"><i class="fa fa-home"></i>خانه</a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
+              <li class="nav-item"><a href="tune.html" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
               <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a></li>
               <li class="nav-item"><a href="#details-2" class="nav-link" data-toggle="collapse"><i class="fa fa-tags"></i>سایر بخش ها<i class="fa fa-plus plus-link"></i></a>
                 <ul class="collapse" id="details-2">
@@ -94,7 +94,7 @@
                 <nav class="navbar navbar-expand-lg">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
+                    <li class="nav-item"><a href="tune.html" class="nav-link">نوبت دهی آنلاین</a></li>
                     <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
                     <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
                       <ul id="detail-list">
