--- a/signin.html
+++ b/signin.html
@@ -52,14 +52,8 @@
           <div id="nav-content">
             <ul class="navbar-nav">
               <li class="nav-item"><a href="index.html" class="nav-link btn-ripple"><i class="fa fa-home"></i>خانه</a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
+              <li class="nav-item"><a href="tune.html" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
               <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a></li>
-              <!-- <li class="nav-item"><a href="#details-1" class="nav-link btn-ripple" data-toggle="collapse"><i class="fa fa-list-ul"></i>امکانات سایت<i class="fa fa-plus plus-link"></i></a>
-                <ul class="collapse" id="details-1">
-                  <li class="nav-item"><a href="#" class="nav-link btn-ripple">نوبت دهی آنلاین</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link btn-ripple">انجمن پرسش و پاسخ</a></li>
-                </ul>
-              </li> -->
               <li class="nav-item"><a href="#details-2" class="nav-link btn-ripple" data-toggle="collapse"><i class="fa fa-tags"></i>سایر بخش ها<i class="fa fa-plus plus-link"></i></a>
                 <ul class="collapse" id="details-2">
                   <li class="nav-item"><a href="#" class="nav-link btn-ripple">مقالات پژوهشی</a></li>
@@ -112,8 +106,7 @@
                 <nav class="navbar navbar-expand-lg">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
-                    <!-- <li class="nav-item"><a href="blog.html" class="nav-link">بلاگ</a></li> -->
-                    <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
+                    <li class="nav-item"><a href="tune.html" class="nav-link">نوبت دهی آنلاین</a></li>
                     <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
                     <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
                       <ul id="detail-list">
