--- a/tune.html
+++ b/tune.html
@@ -1,80 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head dir="rtl" lang="fa">
-    <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="theme-color" content="">
-    <title>دکتر احمدی</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet/community.css">
-    <link rel="stylesheet" href="lib/bootstrap.min.css">  
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
-    <link rel="icon" href="pic/icon.png" type="image/x-icon">
-  </head>    
-  <body >
 
-    <div class="container-fluid" id="content">
-      <!-- mobile header -->
+<head dir="rtl" lang="fa">
+  <meta name="viewport" content="width=device-width , initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="theme-color" content="">
+  <title>دکتر احمدی</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet/tune.css">
+  <link rel="stylesheet" href="lib/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
+  <link rel="icon" href="pic/icon.png" type="image/x-icon">
+</head>
 
-      <header id="mobile-header">
-        <div id="dark-body" onclick="closeSidebar()"></div>
-        <div id="search-tab">
-          <div id="search-box">
-            <form>
-              <div class="input-group">
-                <input type="search" class="form-control" placeholder="جستجو ...">
-                <div class="input-group-append">
-                  <button type="submit">
-                    <i class="fa fa-search"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div id="search-content" onclick="closeSearchBox()"></div>
-        </div>
-        <nav class="navbar">
-          <button type="button" id="open-sidebar" onclick="openSidebar()">
-            <i class="fa fa-navicon"></i>
-          </button>
-          <div id="items">
-            <a id="panel" href="login.html">ورود</a>
-            <span id="search-btn" onclick="openSearchBox()"><i class="fa fa-search"></i></span>
-          </div>
-        </nav>
-        <aside id="sidebar-nav">
-          <div id="title">
-            <a href="#">دکتر محمد حسین احمدی</a>
-          </div>
-          <div id="nav-content">
-            <ul class="navbar-nav">
-              <li class="nav-item" ><a href="index.html" class="nav-link"><i class="fa fa-home"></i>خانه</a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a></li>
-              <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a></li>
-              <li class="nav-item"><a href="#details-2" class="nav-link" data-toggle="collapse"><i class="fa fa-tags"></i>سایر بخش ها<i class="fa fa-plus plus-link"></i></a>
-                <ul class="collapse" id="details-2">
-                  <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
-                </ul>
-              </li>
-              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
-              <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
-            </ul>
-          </div>
-        </aside>
-        <section></section>
-      </header>
+<body>
 
-      <!-- desktop header -->
+  <div class="container-fluid" id="content">
+    <!-- mobile header -->
 
-      <header id="desktop-header" >
-        <div id="search-box-lg">
-          <span type="button" onclick="closeSearchBoxLg()"><i class="fa fa-window-close"></i></span>
+    <header id="mobile-header">
+      <div id="dark-body" onclick="closeSidebar()"></div>
+      <div id="search-tab">
+        <div id="search-box">
           <form>
             <div class="input-group">
-              <input type="search" class="form-control" placeholder="جستجو ..." autofocus>
+              <input type="search" class="form-control" placeholder="جستجو ...">
               <div class="input-group-append">
                 <button type="submit">
                   <i class="fa fa-search"></i>
@@ -82,78 +33,179 @@
               </div>
             </div>
           </form>
-        </div>     
-        <div id="navbar">
-          <div id="bg-color"></div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="navbar-brand"><span>drahmadi.ir</span><br><p>دکتر احمدی</p></div>
+        </div>
+        <div id="search-content" onclick="closeSearchBox()"></div>
+      </div>
+      <nav class="navbar">
+        <button type="button" id="open-sidebar" onclick="openSidebar()">
+          <i class="fa fa-navicon"></i>
+        </button>
+        <div id="items">
+          <a id="panel" href="login.html">ورود</a>
+          <span id="search-btn" onclick="openSearchBox()"><i class="fa fa-search"></i></span>
+        </div>
+      </nav>
+      <aside id="sidebar-nav">
+        <div id="title">
+          <a href="#">دکتر محمد حسین احمدی</a>
+        </div>
+        <div id="nav-content">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="index.html" class="nav-link"><i class="fa fa-home"></i>خانه</a></li>
+            <li class="nav-item"><a href="tune.html" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a>
+            </li>
+            <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a>
+            </li>
+            <li class="nav-item"><a href="#details-2" class="nav-link" data-toggle="collapse"><i
+                  class="fa fa-tags"></i>سایر بخش ها<i class="fa fa-plus plus-link"></i></a>
+              <ul class="collapse" id="details-2">
+                <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
+            <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a>
+            </li>
+          </ul>
+        </div>
+      </aside>
+      <section></section>
+    </header>
+
+    <!-- desktop header -->
+
+    <header id="desktop-header">
+      <div id="search-box-lg">
+        <span type="button" onclick="closeSearchBoxLg()"><i class="fa fa-window-close"></i></span>
+        <form>
+          <div class="input-group">
+            <input type="search" class="form-control" placeholder="جستجو ..." autofocus>
+            <div class="input-group-append">
+              <button type="submit">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div id="navbar">
+        <div id="bg-color"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="navbar-brand"><span>drahmadi.ir</span><br>
+                <p>دکتر احمدی</p>
               </div>
-              <div class="col-lg-6">
-                <nav class="navbar navbar-expand-lg">
-                  <ul class="navbar-nav">
-                    <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">نوبت دهی آنلاین</a></li>
-                    <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
-                    <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
-                      <ul id="detail-list">
-                        <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </nav>
-              </div>
-              <div class="col-lg-3"> 
-                <div id="panel">        
-                  <!-- <a href="clerk-login.html">ورود منشی</a> -->
-                  <span id="login-item">ورود
-                    <ul class="navbar" id="detail-list-2">
-                      <li class="nav-item"><a href="clerk-login.html" class="nav-link">ورود منشی</a></li>
-                      <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
+            </div>
+            <div class="col-lg-6">
+              <nav class="navbar navbar-expand-lg">
+                <ul class="navbar-nav">
+                  <li class="nav-item"><a href="index.html" class="nav-link">خانه</a></li>
+                  <li class="nav-item"><a href="tune.html" class="nav-link">نوبت دهی آنلاین</a></li>
+                  <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
+                  <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
+                    <ul id="detail-list">
+                      <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
                     </ul>
-                  </span>
-                  <a href="signin.html">ثبت نام</a>
-                  <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-3">
+              <div id="panel">
+                <span id="login-item">ورود
+                  <ul class="navbar" id="detail-list-2">
+                    <li class="nav-item"><a href="clerk-login.html" class="nav-link">ورود منشی</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
+                  </ul>
+                </span>
+                <a href="signin.html">ثبت نام</a>
+                <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- main content -->
+
+    <main>
+
+      <div id="tune-container" class="container py-3 my-3">
+        <div class="row mb-5" id="step-one">
+          <div class="col-12 col-md-6 mx-auto mb-5">
+            <h3 class="head-title">جهت نوبت گیری پزشک خود را انتخاب کنید:</h3>
+            <div class="card">
+              <div class="body">
+                <div class="dr-img">
+                  <img src="pic/dr-image.jpg" alt="dr image">
+                </div>
+                <div class="dr-name">
+                  <p>دکتر محمد حسین احمدی</p>
+                  <button class="ripple" name="enter">انتخاب پزشک</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </header>
 
-      <!-- main content -->
-
-      <main>
-
-        <div id="tune-container" class="container bg-white py-3 my-3">
-            <div class="row">
-                <div class="col-12 col-lg-6 col-xl-4 mx-auto">
-                    <div>
-ss
-                    </div>
+        <div class="row" id="step-two">
+          <div class="col-12 col-md-6 mx-auto mb-5">
+            <h3 class="head-title">مشخصات خود را وارد کنید:</h3>
+            <div class="card">
+              <div class="body text-center">
+                <div id="personality-info">
+                  <label for="first-name">نام خود را وارد کنید:</label>
+                  <input type="text" class="form-control" name="firstname" placeholder="نام"><br>
+                  <label for="last-name">نام خانوادگی خود را وارد کنید:</label>
+                  <input type="text" class="form-control" name="lastname" placeholder="نام خانوادگی"><br>
+                  <label for="last-name">سن خود را وارد کنید:</label>
+                  <input type="text" class="form-control" name="age" placeholder="۲۲"><br>
                 </div>
-                <div class="col-12 col-md-8">ss</div>
+                <button class="ripple" name="enter2">تایید مشخصات</button>
+              </div>
             </div>
+          </div>
         </div>
-      </main>
 
-      <!-- footer -->
-
-      <footer>
-        <div class="container">
-          <span id="to-up" class="" onclick="scrollUp()"><i class="fa fa-angle-double-up"></i></span>
-          <p>تمامی حقوق مادی و معنوی این سایت نزد <a href="#">drahmadi.ir</a> محفوظ است.</p>
+        <div class="row" id="step-three">
+          <div class="col-12 col-md-6 mx-auto mb-5">
+            <h3 class="head-title">تاریخ نوبت را انتخاب کنید:</h3>
+            <div class="card">
+              <div class="body text-center" id="wrapper-content">
+                <div id="day-one" class="wrapper">
+                  <span id="day">شنبه</span>
+                  <div class="date">
+                    ۶ خرداد ۱۳۹۹ (سه شنبه)
+                  </div>
+                </div>                      
+              </div>
+            </div>
+          </div>
         </div>
-      </footer>
-    </div>
 
-    <script src="script/index.js"></script>
-    <!-- <script src="script/comiunity.js"></script> -->
-    <script src="lib/jquery.js"></script> 
-    <script src="lib/popper.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-  </body>
+      </div>
+    </main>
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container">
+        <span id="to-up" class="" onclick="scrollUp()"><i class="fa fa-angle-double-up"></i></span>
+        <p>تمامی حقوق مادی و معنوی این سایت نزد <a href="#">drahmadi.ir</a> محفوظ است.</p>
+      </div>
+    </footer>
+  </div>
+
+  <script src="script/index.js"></script>
+  <script src="script/tune.js"></script>
+  <script src="lib/jquery.js"></script>
+  <script src="lib/popper.min.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
+</body>
+
 </html>
