--- a/index.html
+++ b/index.html
@@ -179,39 +179,39 @@
           <div class="row pt-2 p-2">
             <div class="col-12 col-md-6 col-lg-4 pb-5">
               <div class="card">
-                <a href="#" class="hover p-5">
+                <a href="tune.html" class="hover p-5">
                   <p>نوبت دهی آنلاین</p>
                 </a>
                 <div class="header">
-                  <a href="#"><img src="pic/tune.jpg" alt="this image is get tune"></a>
+                  <a href="tune.html"><img src="pic/tune.jpg" alt="this image is get tune"></a>
                 </div>
                 <div class="main">
-                  <a href="#">نوبت دهی آنلاین</a>
+                  <a href="tune.html">نوبت دهی آنلاین</a>
                   <p>
                     این سرویس برای رفاه حال بیماران تهیه شده است و استفاده از ان الزامی نیست. کسانی که بخواهند از سرویس نوبت گیری اینترنتی استفاده کنند همان مبلغ ویزیت طبق تعرفه را میپردازند. استفاده از این سرویس شامل پوشش بیمه ای نیست. بیمارانی که نمیخواهند از این سرویس استفاده کنند کماکان میتوانند مراجعه حضوری داشته باشند.
                   </p>
                 </div>
                 <div class="footer">
-                  <a href="#">ادامه مطلب</a>
+                  <a href="tune.html">ادامه مطلب</a>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 pb-5">
               <div class="card">
-                <a href="#" class="hover">
+                <a href="community.html" class="hover">
                   <p>انجمن پرسش و پاسخ و تعامل بیماران با یکدیگر</p>
                 </a>
                 <div class="header">
-                  <a href="#"><img src="pic/association.jpg" alt="ehis image is questtion and answer association"></a>
+                  <a href="community.html"><img src="pic/association.jpg" alt="ehis image is questtion and answer association"></a>
                 </div>
                 <div class="main">
-                  <a href="#">انجمن پرسش و پاسخ</a>
+                  <a href="community.html">انجمن پرسش و پاسخ</a>
                   <p>
                     سرویس انجمن پرسش و پاسخ جهت تعامل بیماران با یکدیگر و طرح سوالات مربوط به مشکل خود که توسط دیگر کاربران سایت پاسخ داده می شود، راه اندازی شده است. این سرویس ویژه بیماران تحت نظر پزشک نیست و برای سایر عموم قابل دسترس است. با ثبت نام در این سامانه امکان استفاده از آن برای شما فراهم می شود.
                   </p>
                 </div>
                 <div class="footer">
-                  <a href="#">ادامه مطلب</a>
+                  <a href="community.html">ادامه مطلب</a>
                 </div>
               </div>
             </div>
