--- a/tune.html
+++ b/tune.html
@@ -164,7 +164,7 @@
                   <label for="last-name">نام خانوادگی خود را وارد کنید:</label>
                   <input type="text" class="form-control" name="lastname" placeholder="نام خانوادگی"><br>
                   <label for="last-name">سن خود را وارد کنید:</label>
-                  <input type="text" class="form-control" name="age" placeholder="۲۲"><br>
+                  <input type="number" class="form-control" name="age" placeholder="۲۲"><br>
                 </div>
                 <button class="ripple" name="enter2">تایید مشخصات</button>
               </div>
