--- a/tune.html
+++ b/tune.html
@@ -154,8 +154,8 @@
         </div>
 
         <div class="row" id="step-two">
-          <div class="col-12 col-md-6 mx-auto mb-5">
-            <h3 class="head-title">مشخصات خود را وارد کنید:</h3>
+          <div class="col-12 col-md-6 mx-auto ">
+            <h3 class="head-title mt-5">مشخصات خود را وارد کنید:</h3>
             <div class="card">
               <div class="body text-center">
                 <div id="personality-info">
@@ -164,7 +164,7 @@
                   <label for="last-name">نام خانوادگی خود را وارد کنید:</label>
                   <input type="text" class="form-control" name="lastname" placeholder="نام خانوادگی"><br>
                   <label for="last-name">سن خود را وارد کنید:</label>
-                  <input type="number" class="form-control" name="age" placeholder="۲۲"><br>
+                  <input type="text" class="form-control" name="age" placeholder="۲۲"><br>
                 </div>
                 <button class="ripple" name="enter2">تایید مشخصات</button>
               </div>
