--- a/tune.html
+++ b/tune.html
@@ -59,7 +59,7 @@
             <li class="nav-item"><a href="#details-2" class="nav-link" data-toggle="collapse"><i
                   class="fa fa-tags"></i>سایر بخش ها<i class="fa fa-plus plus-link"></i></a>
               <ul class="collapse" id="details-2">
-                <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
+                <li class="nav-item"><a href="#" class="nav-link download">مقالات پژوهشی</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
               </ul>
@@ -106,7 +106,7 @@
                   <li class="nav-item"><a href="community.html" class="nav-link">انجمن</a></li>
                   <li class="nav-item" id="menu-item"><a href="#" class="nav-link">سایر بخش ها</a>
                     <ul id="detail-list">
-                      <li class="nav-item"><a href="#" class="nav-link">مقالات پژوهشی</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link download">مقالات پژوهشی</a></li>
                       <li class="nav-item"><a href="#" class="nav-link">تماس با منشی</a></li>
                       <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
                     </ul>
@@ -135,10 +135,10 @@
 
     <main>
 
-      <div id="tune-container" class="container py-3 my-3">
+      <div id="tune-container" class="container pt-3 my-3">
         <div class="row mb-5" id="step-one">
           <div class="col-12 col-md-6 mx-auto mb-5">
-            <h3 class="head-title">جهت نوبت گیری پزشک خود را انتخاب کنید:</h3>
+            <h3 class="head-title mt-5">جهت نوبت گیری پزشک خود را انتخاب کنید:</h3>
             <div class="card">
               <div class="body">
                 <div class="dr-img">
