--- a/tune.html
+++ b/tune.html
@@ -180,14 +180,46 @@
                 <div id="day-one" class="wrapper">
                   <span id="day">شنبه</span>
                   <div class="date">
-                    ۶ خرداد ۱۳۹۹ (سه شنبه)
+                    <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
+                    <button class="selection ripple" data-action="one">انتخاب</button>
                   </div>
-                </div>                      
-              </div>
-            </div>
+                </div>   
+                
+                <div id="day-one" class="wrapper">
+                  <span id="day">شنبه</span>
+                  <div class="date">
+                    <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
+                    <button class="selection ripple" data-action="two">انتخاب</button>
+                  </div>
+                </div> 
+
+                <div id="day-one" class="wrapper">
+                  <span id="day">شنبه</span>
+                  <div class="date">
+                    <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
+                    <button class="selection ripple" data-action="three">انتخاب</button>
+                  </div>
+                </div> 
+
+                <div id="day-one" class="wrapper">
+                  <span id="day">شنبه</span>
+                  <div class="date">
+                    <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
+                    <button class="selection ripple" data-action="four">انتخاب</button>
+                  </div>
+                </div> 
+
+                <div id="day-one" class="wrapper">
+                  <span id="day">شنبه</span>
+                  <div class="date">
+                    <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
+                    <button class="selection ripple" data-action="five">انتخاب</button>
+                  </div>
+                </div> 
+              </div>            
+            </div>         
           </div>
         </div>
-
       </div>
     </main>
 
