--- a/tune.html
+++ b/tune.html
@@ -52,7 +52,8 @@
         <div id="nav-content">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="index.html" class="nav-link"><i class="fa fa-home"></i>خانه</a></li>
-            <li class="nav-item"><a href="tune.html" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی آنلاین</a>
+            <li class="nav-item"><a href="tune.html" class="nav-link"><i class="fa  fa-calendar-minus-o"></i>نوبت دهی
+                آنلاین</a>
             </li>
             <li class="nav-item"><a href="community.html" class="nav-link"><i class="fa fa-commenting-o"></i>انجمن</a>
             </li>
@@ -183,15 +184,15 @@
                     <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
                     <button class="selection ripple" data-action="one">انتخاب</button>
                   </div>
-                </div>   
-                
+                </div>
+
                 <div id="day-one" class="wrapper">
                   <span id="day">شنبه</span>
                   <div class="date">
                     <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
                     <button class="selection ripple" data-action="two">انتخاب</button>
                   </div>
-                </div> 
+                </div>
 
                 <div id="day-one" class="wrapper">
                   <span id="day">شنبه</span>
@@ -199,7 +200,7 @@
                     <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
                     <button class="selection ripple" data-action="three">انتخاب</button>
                   </div>
-                </div> 
+                </div>
 
                 <div id="day-one" class="wrapper">
                   <span id="day">شنبه</span>
@@ -207,7 +208,7 @@
                     <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
                     <button class="selection ripple" data-action="four">انتخاب</button>
                   </div>
-                </div> 
+                </div>
 
                 <div id="day-one" class="wrapper">
                   <span id="day">شنبه</span>
@@ -215,9 +216,9 @@
                     <p id="txt">۶ خرداد ۱۳۹۹ (سه شنبه)</p>
                     <button class="selection ripple" data-action="five">انتخاب</button>
                   </div>
-                </div> 
-              </div>            
-            </div>         
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
