--- a/clerk-page.html
+++ b/clerk-page.html
@@ -50,10 +50,10 @@
                     <a href="#">دکتر محمد حسین احمدی</a>
                 </div>
                 <div id="nav-content">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><span class="nav-link"><i class="fa fa-list-alt"></i>لیست بیماران</span>
+                    <ul class="navbar-nav navigation-sm">
+                        <li class="nav-item"><span class="nav-link" data-action="temp1"><i class="fa fa-list-alt"></i>لیست بیماران</span>
                         </li>
-                        <li class="nav-item"><span class="nav-link"><i class="fa fa-commenting-o"></i>سوالات</span></li>
+                        <li class="nav-item"><span class="nav-link" data-action="temp2"><i class="fa fa-commenting-o"></i>سوالات</span></li>
                         <li class="nav-item"><a href="index.html" class="nav-link"><i
                                     class="fa fa-sign-out"></i>خروج</a></li>
                         </li>
@@ -91,7 +91,7 @@
         </header>
 
         <aside id="aside">
-            <ul class="navbar-nav navigation">
+            <ul class="navbar-nav navigation-lg">
                 <li class="nav-item"><span class="nav-link" data-action="temp1"><i class="fa fa-list-alt"></i>لیست
                         بیماران</span>
                 </li>
@@ -103,57 +103,7 @@
         </aside>
 
         <main id="main">
-
-            <!-- <div class="container">
-                <nav class="navbar navbar-expand-lg" id="navigation"> 
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><span class="nav-link"><i class="fa fa-commenting-o"></i>لیست بیماران</span></li>
-                        <li class="nav-item"><span class="nav-link"><i class="fa fa-commenting-o"></i>سوالات</span></li>
-                        <li class="nav-item"><span class="nav-link"><i class="fa fa-sign-out"></i>خروج</span></li>
-                    </ul>
-                </nav>
-            </div> -->
-
-            <div class="container">
-                <div id="temp-1"></div>
-                <div id="temp-2"></div>
-                <!-- <div id="temp-1">
-                    <div>
-                        <table class="table text-center table-bordered" id="list-of-patients">
-
-                            <tr class="bg-light">
-                                <th>#</th>
-                                <th>نام</th>
-                                <th>نام خانوادگی</th>
-                                <th>سن</th>
-                                <th>تاریخ نوبت</th>
-                                <th>ساعت رزرو</th>
-                                <th>وضعیت پرداخت</th>
-                                <th>حذف</th>
-                            </tr>
-
-                            <tr id="tr">
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-
-                        </table>
-                    </div>
-                </div> -->
-                <!-- <div id="temp-2">
-                    <div>
-                        در حال حاضر این نسخه از برنامه جهت استفاده می شود
-                    </div>
-                </div> -->
-
-            </div>
-
+            <div class="container" id="main-details"></div>
         </main>
 
     </div>
