--- a/clerk-page.html
+++ b/clerk-page.html
@@ -51,9 +51,14 @@
                 </div>
                 <div id="nav-content">
                     <ul class="navbar-nav navigation-sm">
-                        <li class="nav-item"><span class="nav-link" data-action="temp1"><i class="fa fa-list-alt"></i>لیست بیماران</span>
+                        <li class="nav-item"><span class="nav-link" data-action="temp1"><i
+                                    class="fa fa-list-alt"></i>لیست بیماران</span>
                         </li>
-                        <li class="nav-item"><span class="nav-link" data-action="temp2"><i class="fa fa-commenting-o"></i>سوالات</span></li>
+                        <li class="nav-item"><span class="nav-link" data-action="temp2"><i
+                                    class="fa fa-commenting-o"></i>سوالات</span></li>
+                        <li class="nav-item"><span class="nav-link" data-action="temp3"><i
+                                    class="fa fa-calendar-check-o"></i>ثبت تاریخ</span></li>
+
                         <li class="nav-item"><a href="index.html" class="nav-link"><i
                                     class="fa fa-sign-out"></i>خروج</a></li>
                         </li>
@@ -97,13 +102,70 @@
                 </li>
                 <li class="nav-item"><span class="nav-link" data-action="temp2"><i
                             class="fa fa-commenting-o"></i>سوالات</span></li>
+                <li class="nav-item"><span class="nav-link" data-action="temp3"><i
+                            class="fa fa-calendar-check-o"></i>ثبت تاریخ</span></li>
                 <li class="nav-item"><a href="index.html" class="nav-link"><i class="fa fa-sign-out"></i>خروج</a></li>
-                </li>
             </ul>
         </aside>
 
         <main id="main">
-            <div class="container" id="main-details"></div>
+            <div class="container" id="main-details">
+                <!-- <div class="row mt-5">
+                    <div class="col-12 col-md-6 mx-auto mt-5 save-date">
+                        <form action="" class="text-center">
+                            <label for="day">روز:</label>
+                            <select name="" id="" class="form-control my-3">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                            </select>
+                            <label for="month">ماه:</label>
+                            <select name="" id="" class="form-control my-3">
+                                <option value="فروردین">فروردین</option>
+                                <option value="اردیبهشت">اردیبهشت</option>
+                                <option value="خرداد">خرداد</option>
+                                <option value="تیر">تیر</option>
+                                <option value="مرداد">مرداد</option>
+                                <option value="شهریور">شهریور</option>
+                                <option value="مهر">مهر</option>
+                                <option value="آبان">آبان</option>
+                                <option value="آذر">آذر</option>
+                                <option value="دی">دی</option>
+                                <option value="بهمن">بهمن</option>
+                                <option value="اسفند">اسفند</option>
+                            </select>
+                            <button type="submit" class="btn btn-primary form-control mt-3">ثبت</button>
+                        </form>
+                    </div>
+                </div> -->
+            </div>
         </main>
 
     </div>
