--- a/clerk-login.html
+++ b/clerk-login.html
@@ -61,7 +61,7 @@
                   <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
+              <li class="nav-item"><a href="signup.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
               <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
@@ -126,7 +126,7 @@
                       <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
                     </ul>
                   </span>
-                  <a href="signin.html">ثبت نام</a>
+                  <a href="signup.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
               </div>
