--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
                   <li class="nav-item"><a href="#" class="nav-link">درباره ما</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="signin.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
+              <li class="nav-item"><a href="signup.html" class="nav-link"><i class="fa fa-user"></i>ثبت نام</a></li>
               <li class="nav-item"><a href="clerk-login.html" class="nav-link"><i class="fa fa-sign-in"></i>ورود منشی</a></li>
             </ul>
           </div>
@@ -126,7 +126,7 @@
                       <li class="nav-item"><a href="login.html" class="nav-link">ورود کاربران</a></li>
                     </ul>
                   </span>
-                  <a href="signin.html">ثبت نام</a>
+                  <a href="signup.html">ثبت نام</a>
                   <span id="search-btn-lg" onclick="openSearchBoxLg()"><i class="fa fa-search"></i></span>
                 </div>
               </div>
@@ -172,7 +172,7 @@
                             <input type="checkbox" name="confirm">
                             <span id="terms">مرا به خاطر بسپار</span><a href="#" class="float-left">پسوردتان را فراموش کرده اید؟</a><br>
                             <button type="submit" name="submit-form ripple">ورود</button>
-                            <a href="signin.html" id="btn" class="ripple">ثبت نام</a>
+                            <a href="signup.html" id="btn" class="ripple">ثبت نام</a>
                             <a href="clerk-login.html" class="ripple" id="btn">ورود منشی</a>
                         </form>
                     </div>
